# hello-world-backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  Vagrantfile  asgi.py  docker-compose.yml  mkdocs.yml  pyproject.toml
.circleci/: config.yml
.github/: pull_request_template.md
.github/workflows/: main.yml
docs/: releases.md
docs/api/: 0-overview.md  1-auth.md
docs/backend/: server_config.md
hello_world/base/: admin.py  emails.py
hello_world/base/api/: pagination.py  schemas.py
hello_world/base/templatetags/: urls_extra.py
hello_world/base/utils/: versatileimagefield.py
hello_world/messages/: apis.py
hello_world/templates/: base.html
hello_world/users/: admin.py  models.py
hello_world/users/auth/: api.py  backends.py  emails.py  serializers.py  services.py  tasks.py
hello_world/users/auth/tests/: test_user_login_api.py  test_user_password_change_api.py  test_user_register_api.py
hello_world/users/migrations/: 0001_initial.py
hello_world/users/tests/: factories.py  test_current_user_api.py
infra/dockers/base/: Dockerfile
infra/dockers/local/: entrypoint
infra/dockers/local/app/: Dockerfile
infra/dockers/local/scripts/: runserver.sh
infra/dockers/production/: entrypoint
infra/dockers/production/app/: Dockerfile
infra/dockers/production/scripts/: migrate.sh  run-daphne.sh  run-uwsgi.sh
infra/dockers/production/scripts/nginx/: nginx-site.conf  nginx.conf  nginx.sh
infra/dockers/production/scripts/uwsgi/: uwsgi.ini
infra/provisioner/: deploy-service.yml
infra/provisioner/group_vars/all/: main.yml
infra/provisioner/hosts/: dev  prod
infra/provisioner/roles/ecr_docker_utils/tasks/: login_ecr.yml
infra/provisioner/roles/hello_world/tasks/: apiserver_setup.yml  celery_setup.yml  docker_status.yml  install_docker.yml  main.yml
requirements/: development.txt  production.txt
settings/: common.py  exceptions.py  production.py  utils.py
settings/configs/: __init__.py  cache.py  celery.py  knox.py  sentry.py  versatileimagefield.py
